menu agregado mobile y desktop

--- a/blog.html
+++ b/blog.html
@@ -54,15 +54,15 @@
                         <div></div>
                     </div>
                     <ul class="menu">
-                        <li><a class="activo" href="index.html">Inicio</a></li>
+                        <li><a  href="index.html">Inicio</a></li>
                         <li><a href="menu.html">Menu</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a class="activo" href="blog.html">Blog</a></li>
                         <li><a href="equipo.html">Equipo</a></li>
                     </ul>
                 </div>
             </nav>
         </header>
-        
+        <!-- <h1>Blog</h1> -->
         <main class="main_blog">
 
         <section id="ourblogs">
@@ -90,12 +90,11 @@
                     </a>
                 </article>
                 <article class="container_blog-article">
-                    <img src="./images/news4.jpg" alt="top five reasons to visit">
+                    <img src="./images/news4.jpg" alt="top five reasons to visit"></img>
                     <div class="image_date">
                         <span class="span1">17</span>
                         <span class="span1">Feb</span>
                     </div>
-                    </img>
                     <h3>Top Five Reasons to Visit</h3>
                     <p class="posted_by_rovers">Posted by Rovers</p>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt ullam non aliquid minima ratione natus?</p>
