--- a/menu.html
+++ b/menu.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Today's Menu</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -54,105 +54,125 @@
                         <div></div>
                     </div>
                     <ul class="menu">
-                        <li><a class="activo" href="index.html">Inicio</a></li>
-                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a class="activo" href="menu.html">Menu</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="equipo.html">Equipo</a></li>
                     </ul>
                 </div>
             </nav>
         </header>
-        <div class="hero">
-            <div class="container">
-                <h1>Las mejores hamburguesas del mundo</h1>
-                <h2>Bienvenido a nuestra hamburguesería</h2>
-                <p>Come por 15&euro;</p>
-                <div>
-                    <a href="#" class="boton">
-                        Nuestra Carta
-                        <i class="fas fa-long-arrow-alt-right"></i>
-                    </a>
-                </div>
-                <ul class="social">
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                </ul>
-            </div>
-        </div>
-        <main>
-            <!-- <h1>Home</h1> -->
+        
+ 
+        <!-- <h1>Menu</h1> -->
+        <main class="main_menu">
             <section id="ourservices">
                 <div class="container">
-                    <h2>Our <span>Services</span></h2>
+                    <h2>Today's <span>Menu</span></h2>
                     <div class="underline">
                         <hr noshade="noshade">
                         <span>X</span>
-                    </div>
-                    <div class="grid">
-
-                        <article>
-                            <div>
-                                <i class="fas fa-cogs"></i>
-                            </div>
-                            <h3>1. Carne 100% natural</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis necessitatibus totam nesciunt. Illum adipisci pariatur quia sequi! Iste, explicabo. Dignissimos.</p>
-                            <a class="enlace" href="">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
-                        </article>
-
-                        <article>
-                            <div>
-                                <i class="fas fa-truck"></i>
-                            </div>
-                            <h3>2. Cocina Moderna</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis necessitatibus totam nesciunt. Illum adipisci pariatur quia sequi! Iste, explicabo. Dignissimos.</p>
-                            <a class="enlace" href="">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
-                        </article>
-
-                        <article>
-                            <div>
-                                <i class="fas fa-heart"></i>
-                            </div>
-                            <h3>3. Servicio impecable</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis necessitatibus totam nesciunt. Illum adipisci pariatur quia sequi! Iste, explicabo. Dignissimos.</p>
-                            <a class="enlace" href="">Leer más <i class="fas fa-long-arrow-alt-right"></i></a>
-                        </article>
-
                     </div>
                 </div>
             </section>
-
-            <section id="aboutus">
-                <div class="container">
-                    <h2>About <span>Us</span></h2>
-                    <div class="underline">
-                        <hr noshade="noshade">
-                        <span>X</span>
+            <div class="menu_container">
+                <aside>
+                    <div class="menu_options">
+                        <ul>
+                            <li><a href="#" class="a_active">Breakfast</a></li>
+                            <li><a href="#">Lunch</a></li>
+                            <li><a href="#">Dinner</a></li>
+                            <li><a href="#">Others</a></li>
+                        </ul>
                     </div>
-                    <article class="grid">
-                        <figure>
-                            <div class="frame">
-                                <img src="./images/about-main.jpg" alt="nuestro chef">
-                            </div>
-                        </figure>
-                        <div>
-                            <h3>The History</h3>
-                            <h4>Our Restaurant</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum in deleniti laborum consequuntur voluptatem sequi exercitationem magnam at iusto libero voluptate, non quo ducimus velit nulla illo suscipit reprehenderit distinctio?</p>
-                            <div>
-                                <a href="#" class="boton">
-                                    Leer más
-                                    <i class="fas fa-long-arrow-alt-right"></i>
-                                </a>
-                            </div>
+                    <div class="today_offer">
+                        <h3>Today's Hot Offers</h3>
+                        <div class="underline">
+                            <hr noshade="noshade">
                         </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus fugit nobis iure molestiae ex corporis!</p>
+                    </div>
+                </aside>
+                <section class="menu_item_container">
+                    <article class="menu_item">
+                        <figure>
+                            <img src="./images/t1.jpg" alt="hamburguesa completa">
+                        </figure>
+                    <div class="item_description">
+                        <div class="item_description_title">
+                            <h3>Chicken Burger With Cheese and Butter</h3>
+                            <p class="price">$95</p>
+                        </div>
+                        <p>Vegetable and chicken burger with extra butter</p>
+                        <a href="#" class="boton_read_more">
+                            Order Now
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </a>
+                    </div>
                     </article>
-                </div>
-            </section>
 
+                    <article class="menu_item">
+                        <figure>
+                            <img src="./images/t4.jpg" alt="cafe">
+                        </figure>
+                    <div class="item_description">
+                        <div class="item_description_title">
+                            <h3>Coffee and Tea with Milk and Chocolate</h3>
+                            <p class="price">$30</p>
+                        </div>
+                        <p>Vegetable and chicken burger with extra butter</p>
+                        <a href="#" class="boton_read_more">
+                            Order Now
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </a>
+                    </div>
+                    </article>
 
-
+                    <article class="menu_item">
+                        <figure>
+                            <img src="./images/t3.jpg" alt="pizza">
+                        </figure>
+                    <div class="item_description">
+                        <div class="item_description_title">
+                            <h3>Hot Pizza with Extra Cheese and Butter</h3>
+                            <p class="price">$65</p>
+                        </div>
+                        <p>Vegetable and chicken burger with extra butter</p>
+                        <a href="#" class="boton_read_more">
+                            Order Now
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                        </a>
+                    </div>
+                    </article>
+                </section>
+            </div>
         </main>
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <footer>
             <div class="container">
                 <nav>Copyright &copy; - <a href="#">Aviso Legal</a> - <a href="#">Cookies</a></nav>
